--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -63,9 +63,8 @@ $lighter-gray: mix(#fff, $gray, 90%) !default;
 
 $background-color: #fff !default;
 // $code-background-color: #fafafa !default;
-// $code-background-color-dark: $light-gray !default;
 $code-background-color: #69c5a7 !default;
-$code-background-color-dark: #fff !default;
+$code-background-color-dark: $light-gray !default;
 $text-color: $dark-gray !default;
 $muted-text-color: mix(#fff, $text-color, 20%) !default;
 $border-color: $lighter-gray !default;
